# AWS---Team-GreenWhich

./: .gitignore  API_DOCUMENTATION.md  AWS_BEDROCK_COMPLETE_SETUP_GUIDE.md  AWS_COMPLETE_SETUP_GUIDE.md  COMMIT_MESSAGE.txt  COMMIT_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  GET_STARTED.md  HOW_TO_COMMIT.md  MIGRATION_SUMMARY.md  Makefile  NEXT_STEPS.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SETUP.md  SETUP_SUMMARY.md  SIMPLE_DEPLOYMENT.md  TECHNICAL_REPORT.docx  docker-compose.yml  git-commit-and-push.ps1  git-commit-and-push.sh  temp_deploy_local.md
.kiro/specs/cloudforge-bug-intelligence/: design.md  requirements.md  tasks.md
backend/: .env.example  .pre-commit-config.yaml  AWS_BEDROCK_SETUP.md  CHATBOT_GUIDE.md  README.md  REQUIRED_INPUTS.md  config.example.py  pyproject.toml  requirements.txt  run_web.py  test_chatbot_simple.py
backend/cloudforge/: __init__.py  main.py
backend/cloudforge/agents/: __init__.py  analysis.py  bug_detective.py  execution.py  resolution.py  test_architect.py
backend/cloudforge/api/: __init__.py  auth.py  chatbot_routes.py  main.py  models.py
backend/cloudforge/chatbot/: __init__.py  chatbot_engine.py  command_processor.py  voice_assistant.py
backend/cloudforge/models/: __init__.py  config.py  state.py
backend/cloudforge/orchestration/: __init__.py  state_store.py  workflow_orchestrator.py
backend/cloudforge/utils/: __init__.py  bedrock_client.py  export.py  logging_config.py  metrics.py  notifications.py  retry.py  s3_storage.py
backend/cloudforge/web/: __init__.py  app.py
backend/cloudforge/web/static/css/: style.css
backend/cloudforge/web/static/js/: main.js
backend/cloudforge/web/templates/: base.html  chatbot.html  home.html  index.html  workflow_detail.html  workflows.html
backend/tests/: __init__.py  conftest.py
backend/tests/property/: test_bug_detective_properties.py
backend/tests/unit/: test_analysis.py  test_api.py  test_circuit_breaker.py  test_config.py  test_execution.py  test_export.py  test_logging_config.py  test_metrics.py  test_models.py  test_notifications.py  test_resolution.py  test_retry.py  test_s3_storage.py  test_state_store.py  test_test_architect.py  test_workflow_orchestrator.py
examples/: EXAMPLES_GUIDE.md  README.md
examples/api_examples/: basic_workflow.py
examples/integration_examples/: github_actions_example.yml
examples/sample_repository/: buggy_code.py
examples/workflow_scenarios/: security_scan.py
infrastructure/: .eslintrc.json  cdk.json  jest.config.js  package.json  tsconfig.json
infrastructure/test/: cloudforge-infrastructure.test.ts
report/: bedrock_integration_report.md  completed.md  pending.md
scripts/: deploy-infrastructure.ps1  deploy-infrastructure.sh
