[tool.poetry]
name = "cloudforge-bug-intelligence"
version = "0.1.0"
description = "AWS-native multi-agent platform for automated bug lifecycle management"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "cloudforge"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core dependencies
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# AWS SDK
boto3 = "^1.34.0"
botocore = "^1.34.0"

# LangGraph for orchestration
langgraph = "^0.0.20"
langchain = "^0.1.0"
langchain-aws = "^0.1.0"

# API framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
slowapi = "^0.1.9"  # Rate limiting

# Async support
aiofiles = "^23.2.1"
httpx = "^0.26.0"

# Utilities
python-dotenv = "^1.0.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
hypothesis = "^6.92.0"
moto = {extras = ["dynamodb", "s3", "lambda", "ecs"], version = "^5.0.0"}

# Linting and formatting
ruff = "^0.1.0"
black = "^23.12.0"
mypy = "^1.8.0"
types-boto3 = "^1.34.0"

# Development tools
ipython = "^8.20.0"
pre-commit = "^3.6.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "property_test: Property-based tests",
    "integration: Integration tests",
    "slow: Slow-running tests"
]
addopts = [
    "--strict-markers",
    "--cov=cloudforge",
    "--cov-report=html",
    "--cov-report=term-missing"
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain.*",
    "moto.*",
    "hypothesis.*"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
